--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "phantomjs": "~1.9.2-0",
-    "line-stream": "0.0.3"
+    "line-stream": "0.0.3",
+    "coffee-script": "~1.6.3"
   }
 }
